objects/PTI_Program_Data_Line__c.object
<CustomObject>
    <fields>
        <fullName>PTI_Aircraft_Type__c</fullName>
        <formula>PTI_P_L_Program_Data_Header__r.PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Aircraft_Type__r.L2I_Aircraft_Type__c</formula>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Airline_Name__c</fullName>
        <formula>PTI_P_L_Program_Data_Header__r.PTI_Operator__c</formula>
        <label>Airline Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Config_Number__c</fullName>
        <label>Config Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Created_By_Name__c</fullName>
        <formula>CreatedBy.LastName+ &#39;, &#39;+ CreatedBy.FirstName</formula>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Discount_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTI_Install_Location__c</fullName>
        <label>Install Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_No_Of_Aircraft_Firm__c</fullName>
        <formula>PTI_P_L_Program_Data_Header__r.PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_AircraftQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Aircraft Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTI_Opportunity_Ref_Number__c</fullName>
        <formula>PTI_P_L_Program_Data_Header__r.PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Opportunity_Number__c</formula>
        <label>Opportunity Ref Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_P_L_Program_Data_Header__c</fullName>
        <label>P&amp;L Program Data Header</label>
        <referenceTo>PTI_Program_Data_Header__c</referenceTo>
        <relationshipLabel>P&amp;L Program Data Lines</relationshipLabel>
        <relationshipName>P_L_Program_Data_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PTI_Part_Description__c</fullName>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Program_Description__c</fullName>
        <formula>PTI_P_L_Program_Data_Header__r.PTI_Program_Description__c</formula>
        <label>Sales Opp Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Program_Key__c</fullName>
        <formula>PTI_P_L_Program_Data_Header__r.PTI_Program_Key__c</formula>
        <label>Program Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTI_Related_Quotes__c</fullName>
        <label>Related Quotes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Sales_Region__c</fullName>
        <formula>CASE(PTI_P_L_Program_Data_Header__r.PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.L2I_Oppt_Region__c, &#39;Americas&#39;, &#39;1-Americas&#39;, &#39;Asia&#39;, &#39;2-Asia&#39;,&#39;Europe&#39;,&#39;3-Europe&#39;,&#39;Japan&#39;,&#39;4-Japan&#39;,&#39;Middle East&#39;,&#39;5-Middle East&#39;,&#39;Oceania&#39;,&#39;6-Oceania&#39;,&#39;China&#39;,&#39;7-China&#39;,null)</formula>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_System_Type__c</fullName>
        <formula>PTI_P_L_Program_Data_Header__r.PTI_P_L_Sales_Opportunity__r.L2I_Sales_Opportunity__r.PrimarySystemTypeName__c</formula>
        <label>System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTI_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTI_Unit_Net__c</fullName>
        <label>Unit Net</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PTI_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>P&amp;L Program Data Line</label>
    <nameField>
        <displayFormat>PDL-{0000000}</displayFormat>
        <label>P&amp;L Program Data Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P&amp;L Program Data Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>